--- a/flagfe/src/component/carrierselectionpage/RouteInfo.css
+++ b/flagfe/src/component/carrierselectionpage/RouteInfo.css
@@ -105,4 +105,26 @@
   font-size: large;
   cursor: pointer;
 }
-  
+
+.number-display {
+  width: 100%;
+  height: 40px;
+  background-color: rgb(230, 230, 230);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.info-blocks {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.info-block {
+  display: flex;
+  flex-direction: column;
+}
