--- a/flagfe/src/component/Homepage.css
+++ b/flagfe/src/component/Homepage.css
@@ -23,8 +23,8 @@
 }
 
 .app_header img {
-  margin-right: 0px;
-  height: 100%;
+  margin-right: 17px;
+  height: 80%;
   cursor: pointer;
 }
 
@@ -123,6 +123,7 @@ label[for="weight"] {
 .form button {
   margin-top: 20px;
   height: 55px;
+  width: 130px;
   border-radius: 20px;
   border-width: 0;
   background-color: rgb(79, 233, 167);
