--- a/flagfe/src/component/carrierselectionpage/RouteInfo.css
+++ b/flagfe/src/component/carrierselectionpage/RouteInfo.css
@@ -1,3 +1,7 @@
+.root {
+  display: flex;
+  flex-direction: column;
+}
 
 .route-info {
     display: flex;
@@ -84,9 +88,19 @@
   flex-direction: column;
 }
   
-.route-info-section h3,
+.route-info-section h3{
+  margin-bottom: 20px;
+  font-size: 1.2em;
+  position: relative;
+  top: -50px;
+  left: 20px;
+}
 .carrier-type-section h3 {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  font-size: 1.2em;
+  position: relative;
+  top: 17px;
+  left: 35px;
 }
   
 .carrier-type-dropdown {
@@ -97,8 +111,11 @@
   
 .book-button {
   margin-top: 20px;
-  height: 40px;
-  border-radius: 20px 20px 20px 20px;
+  margin-left: 60px;
+  text-align: center; 
+  height: 55px;
+  border-radius: 20px;
+  width: 130px;
   border-width: 0;
   background-color: rgb(79, 233, 167);
   color: white;
@@ -109,22 +126,20 @@
 .number-display {
   width: 100%;
   height: 40px;
-  background-color: rgb(230, 230, 230);
+  background-color: rgba(243, 239, 239, 0.614);
   border: 1px solid #ccc;
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
+  margin-top: 0px;
+  font-size: 1.2em;
+  position: relative;
+  top: 0px;
 }
 
 .info-blocks {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-}
-
-.info-block {
-  display: flex;
-  flex-direction: column;
+  gap: 50px;
 }
